# shxarray

./: .gitignore  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  headerlicense.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  dev.rst  examples.rst  index.rst  installation.rst  introduction.rst  tutorial.rst
docs/source/_templates/: module.rst_t  package.rst_t
docs/source/logo_etc/: logo_base.xcf  make_logobase.ipynb  makefavicon
docs/source/notebooks/: Geometry2sphericalHarmonics.ipynb  OceanMask.ipynb  SealevelEquation.ipynb  TerrestrialWaterStorage.ipynb  isotropickernels.ipynb  jupyexamples.rst  visualize_filter.ipynb
sample-data/: GRACEDataSample_2020.sql  dump-grace.py
src/builtin_backend/: Gaunt.hpp  Helpers.hpp  Legendre.hpp  Legendre_nm.hpp  Wigner3j.hpp  Ynm.hpp  analysis.pyx  gaunt.pxd  gaunt.pyx  legendre.pxd  legendre.pyx  shindex.pxd  shlib.cpp  shlib.pyx  sinex.pyx  synthesis.pyx  wigner3j.pxd  wigner3j.pyx  ynm.pyx
src/ext/: Helpers.hpp  Legendre_nm.hpp  legendre.pxd  shlib.cpp  shlib.pyx
src/shtns_backend/: shtns.py
src/shxarray/: __init__.py  _version.py  admin.py  cf.py  logging.py  sh_indexing.py  shcomputebase.py  shxarbase.py  xr_accessor.py
src/shxarray/core/: admin.py  cf.py  logging.py  sh_indexing.py  shcomputebase.py  shxarbase.py  time.py  xr_accessor.py
src/shxarray/dev/: __init__.py
src/shxarray/earth/: constants.py  ellipsoid.py  rotation.py  snrei.py
src/shxarray/earth/sealevel/: __init__.py  sealevel.py  spectralsealevel.py
src/shxarray/exp/: __init__.py  multiply.py  p2s.py
src/shxarray/geom/: points.py  polygons.py
src/shxarray/geoslurp/: GRACEDsets.py  TUGRAZDsets.py  deg1n2.py  gracefilters.py  graceviews.py  gravity.py  icgem.py  icgemdset.py  loadlove.py
src/shxarray/io/: __init__.py  binv_legacy.py  gsmv6.py  gzipwrap.py  icgem.py  shascii.py  shiobackend.py  sinex.py
src/shxarray/kernels/: __init__.py  anisokernel.py  axial.py  ddk.py  factory.py  gauss.py  gravfunctionals.py  isokernelbase.py
src/shxarray/signal/: basinav.py  leakage.py  leakage_vishwa.py  leakage_vishwa2016.py
tests/: fixtures.py  shanalysis-test-paracap-n200.nc  test_analysis.py  test_basic_ops.py  test_basinav.py  test_filters.py  test_gravfunc.py  test_prod2sum.py  test_shformats.py  test_shtns_backend.py  test_synthesis.py  test_wigner3j_gaunt.py
tests/testdata/: P2Sum_ocean10.nc  P2Sum_ocean25.nc  icgem_test_nosig_ITSG.gfc
