[build-system]
requires = ["setuptools>=61.0","numpy","Cython","wheel","pytest"]
build-backend = "setuptools.build_meta"
[project]
name = "shxarray"
version = "0.0.1"
authors = [
  { name="Roelof Rietbroek", email="r.rietbroek@utwente.nl" },
]
description = "Spherical harmonic extension for Xarray"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 1 - Planning"
]

#For some reason specifying the xarray-backend as below is not working in toml (it's added in setup.py)
[project.entry-points."xarray.backends"]
icgem = "shxarray.io.shiobackend:ICGEMBackEntryPoint"
gsmv6 = "shxarray.io.shiobackend:GSMv6BackEntryPoint"
shascii ="shxarray.io.shiobackend:SHAsciiBackEntryPoint"
#ddk = "shxarray.io.shiobackend:DDKBackEntryPoint"

[project.entry-points."shxarray.computebackends"]
shlib = "shxarray.shlib:SHComputeBackend"

[project.urls]
"Homepage" = "https://github.com/ITC-Water-Resources/shxarray"
"Bug Tracker" = "https://github.com/ITC-Water-Resources/shxarray/issues"


