[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8","numpy","Cython","wheel","pytest"]
build-backend = "setuptools.build_meta"
[project]
name = "shxarray"
dynamic = ["version"]
#version = "0.0.1"
authors = [
  { name="Roelof Rietbroek", email="r.rietbroek@utwente.nl" },
]
description = "Spherical harmonic extension for Xarray"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 1 - Planning"
]
dependencies = [ "pandas >= 2.0", "pyaml >= 23.9.0", "scipy", "xarray >= 2023.1.0",
"numba", "sparse","importlib_metadata","requests","openpyxl"]

[tool.setuptools_scm]
# empty for now

#For some reason specifying the xarray-backend as below is not working in toml (it's added in setup.py)
[project.entry-points."xarray.backends"]
icgem = "shxarray.io.shiobackend:ICGEMBackEntryPoint"
gsmv6 = "shxarray.io.shiobackend:GSMv6BackEntryPoint"
shascii ="shxarray.io.shiobackend:SHAsciiBackEntryPoint"
#ddk = "shxarray.io.shiobackend:DDKBackEntryPoint"

[project.entry-points."shxarray.computebackends"]
shlib = "shxarray.shlib:SHComputeBackend"

[project.urls]
"Homepage" = "https://github.com/ITC-Water-Resources/shxarray"
"Bug Tracker" = "https://github.com/ITC-Water-Resources/shxarray/issues"

[project.entry-points."geoslurp.dsetfactories"]
deg1n2corr = "shxarray.geoslurp.deg1n2:getDeg1n2corrDsets"

[project.entry-points."geoslurp.dsets"]
icgemstatic = "shxarray.geoslurp.icgemdset:ICGEMstatic"
