[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8","numpy","Cython>=3","wheel","pytest","scipy","packaging"]
build-backend = "setuptools.build_meta"
[project]
name = "shxarray"
dynamic = ["version"]
#version = "0.0.1"
authors = [
  { name="Roelof Rietbroek", email="r.rietbroek@utwente.nl" },
]
description = "Spherical harmonic extension for Xarray"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 1 - Planning"
]
dependencies = [ "pandas >= 2.0", "pyaml >= 23.9.0", "scipy", "xarray >= 2023.1.0",
"numpy","numba", "sparse","importlib_metadata","requests","openpyxl","geopandas"]

[project.optional-dependencies]
#you need dask in combination with when using older xarray versions
dask=["dask>=2022.9.2"]
#Optionally speed up reading of gzip compressed files:
rapidgzip=["rapidgzip"]

[tool.setuptools_scm]
version_file = "src/shxarray/_version.py"

#For some reason specifying the xarray-backend as below is not working in toml (it's added in setup.py)
[project.entry-points."xarray.backends"]
icgem = "shxarray.io.shiobackend:ICGEMBackEntryPoint"
gsmv6 = "shxarray.io.shiobackend:GSMv6BackEntryPoint"
shascii ="shxarray.io.shiobackend:SHAsciiBackEntryPoint"
sinex ="shxarray.io.shiobackend:SINEXBackEntryPoint"
#ddk = "shxarray.io.shiobackend:DDKBackEntryPoint"

[project.entry-points."shxarray.computebackends"]
shtns = "shtns_backend.shtns:SHTnsBackend"
shlib = "shxarray.shlib:SHComputeBackend"

[project.urls]
"Homepage" = "https://github.com/ITC-Water-Resources/shxarray"
"Bug Tracker" = "https://github.com/ITC-Water-Resources/shxarray/issues"

[project.entry-points."geoslurp.dsetfactories"]
deg1n2corr = "shxarray.geoslurp.deg1n2:getDeg1n2corrDsets"
tugrazgrace = "shxarray.geoslurp.TUGRAZDsets:TUGRAZGRACEDsets"
gracel2 = "shxarray.geoslurp.GRACEDsets:GRACEDsets"

[project.entry-points."geoslurp.dsets"]
icgemstatic = "shxarray.geoslurp.icgemdset:ICGEMstatic"
loadlove = "shxarray.geoslurp.loadlove:LLove"
gracefilter = "shxarray.geoslurp.gracefilters:GRACEfilter"

[project.entry-points."geoslurp.viewfactories"]
graceviews = "shxarray.geoslurp.graceviews:getGRACEviews"
